--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,7 @@ h1 {
     background: url(/assets/images/png/bg-hero.png);
     background-position: cover;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
 }
 
 .bg-project {
@@ -369,12 +369,13 @@ h1 {
 
 .service-card {
     padding: 20px;
+    border-radius: 12px;
     transition: all 100ms;
+    border: 1px solid rgba(255, 255, 255, 0.10);
+
 }
 
 .service-card:hover {
-    border-radius: 12px;
-    border: 1px solid rgba(255, 255, 255, 0.10);
     background: rgba(255, 255, 255, 0.10);
     box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.15);
     backdrop-filter: blur(8px);
@@ -400,9 +401,11 @@ h1 {
     display: block;
 
 }
-
-.project-box:hover {
+.project-box{
     transition: all 500ms;
+}
+.project-box:hover {
+    
     transform: scale(1.3);
     z-index: 1;
 }
@@ -445,7 +448,7 @@ h1 {
     width: 226px;
     height: 226px;
     position: absolute;
-    bottom: 10%;
+    bottom: 25%;
     right: -10%;
 }
 
@@ -466,7 +469,7 @@ h1 {
     width: 226px;
     height: 226px;
     position: absolute;
-    top: -10%;
+    top: 10%;
     right: -10%;
 }
 
@@ -603,6 +606,9 @@ h1 {
 .hero-img {
     width: 100%;
 }
+.footer-logo {
+    width: 25%;
+}
 
 @media (min-width:576px) {
     .hero-img {
@@ -628,6 +634,7 @@ h1 {
 
     .hero-img {
         width: 100% !important;
+        height: 100% !important;
     }
 
 
